--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "cross-env DEBUG=makerstats:* nodemon ./bin/www"
+    "dev": "cross-env DEBUG=makerstats:* nodemon ./bin/www",
+    "installDB": "node ./lib/scripts/install_bd"
   },
   "dependencies": {
     "body-parser": "~1.18.2",
@@ -12,6 +13,9 @@
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.15.5",
+    "express-validator": "^4.3.0",
+    "mongodb": "^3.0.0-rc0",
+    "mongoose": "^4.13.7",
     "morgan": "~1.9.0",
     "serve-favicon": "~2.4.5"
   },
