--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
   },
   "dependencies": {
     "body-parser": "~1.18.2",
+    "chart.js": "^2.7.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.15.5",
     "express-validator": "^4.3.0",
+    "moment": "^2.20.1",
     "mongodb": "^3.0.0-rc0",
     "mongoose": "^4.13.7",
     "morgan": "~1.9.0",
+    "regression": "^2.0.1",
     "request": "^2.83.0",
     "serve-favicon": "~2.4.5"
   },
