--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "body-parser": "~1.18.2",
+    "capitaljs": "^1.0.3",
     "chart.js": "^2.7.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.15.5",
     "express-validator": "^4.3.0",
+    "js-polynomial-regression": "^0.9.0",
     "moment": "^2.20.1",
     "mongodb": "^3.0.0-rc0",
     "mongoose": "^4.13.7",
